Fixed project title font-size on smaller devices

--- a/personalpage/src/index.css
+++ b/personalpage/src/index.css
@@ -146,7 +146,7 @@ main{
 }
 
 .project-heading h1 {
-  font-size: 480% !important;
+  font-size: 280% !important;
 }
 
 hr {
